collapsed sidebar ui issue reolved

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,10 @@
     color: #fff;
   }
 
+  .app-menu__label_child {
+    font-size: 12px;
+  }
+
   .treeview-item {
     padding: 12px 15px 12px 25px;
   }
@@ -51,7 +55,8 @@ ul.app-menu {
     vertical-align: middle;
   }
 
-  .app-menu__label {
+  .app-menu__label,
+  .app-menu__label_child {
     font-size: 12px;
   }
 
